// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> layout it renders Button on touch devices 1`] = `
<Button>
  <button
    className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_content-type_text"
    download={false}
    onClick={[Function]}
    type="button"
  >
    <div
      className="mfui-button__inner"
    />
  </button>
</Button>
`;

exports[`<Button /> layout it renders children 1`] = `
<a
  className="mfui-button mfui-button_type_primary mfui-button_theme_purple mfui-button_size-all_large mfui-button_no-touch mfui-button_content-type_text class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  rel="noreferrer noopener"
  target="_blank"
>
  <div
    className="mfui-button__inner"
  >
    <div
      className="mfui-button__content content-class"
    >
      <span
        className="mfui-button__text"
      >
        button
      </span>
    </div>
  </div>
</a>
`;

exports[`<Button /> layout renders Button with default props 1`] = `
<button
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch mfui-button_content-type_text"
  download={false}
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-button__inner"
  />
</button>
`;

exports[`<Button /> layout renders Button with props 1`] = `
<a
  className="mfui-button mfui-button_type_primary mfui-button_theme_purple mfui-button_size-all_large mfui-button_no-touch mfui-button_content-type_text class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  rel="noreferrer noopener"
  target="_blank"
>
  <div
    className="mfui-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render full width button 1`] = `
<a
  className="mfui-button mfui-button_type_primary mfui-button_theme_purple mfui-button_size-all_large mfui-button_full-width mfui-button_no-touch mfui-button_content-type_text class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  rel="noreferrer noopener"
  target="_blank"
>
  <div
    className="mfui-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render tag "a" with download attribute 1`] = `
<a
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch mfui-button_content-type_text"
  disabled={false}
  download={true}
  href="test"
  onClick={[Function]}
>
  <div
    className="mfui-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render tag a with disabled state 1`] = `
<a
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_disabled mfui-button_size-all_medium mfui-button_no-touch mfui-button_content-type_text"
  disabled={false}
  href="test"
  onClick={[Function]}
>
  <div
    className="mfui-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render tag button with disabled state 1`] = `
<button
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_disabled mfui-button_size-all_medium mfui-button_no-touch mfui-button_content-type_text"
  disabled={true}
  download={false}
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-button__inner"
  />
</button>
`;

exports[`<Button /> layout should render tag with target _self and without rel attribute 1`] = `
<a
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch mfui-button_content-type_text"
  disabled={false}
  href="test"
  onClick={[Function]}
  target="_self"
>
  <div
    className="mfui-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render tag without target and with rel attribute 1`] = `
<a
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch mfui-button_content-type_text"
  disabled={false}
  href="test"
  onClick={[Function]}
  rel="nofollow"
>
  <div
    className="mfui-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render tag without target, href and rel attribute 1`] = `
<button
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch mfui-button_content-type_text"
  download={false}
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-button__inner"
  />
</button>
`;

exports[`<Button /> layout should render with arrow icon on the right 1`] = `
<button
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch mfui-button_content-type_text"
  download={false}
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-button__inner"
  >
    <div
      className="mfui-button__content"
    >
      <span
        className="mfui-button__text"
      >
        arrow
      </span>
      <test-file-stub
        className="mfui-button__icon-arrow"
      />
    </div>
  </div>
</button>
`;

exports[`<Button /> layout should render with custom icon 1`] = `
<button
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch mfui-button_content-type_icon"
  download={false}
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-button__inner"
  >
    <div
      className="mfui-button__content"
    >
      <div
        className="mfui-button__icon"
      >
        <test-file-stub />
      </div>
    </div>
  </div>
</button>
`;

exports[`<Button /> layout should render with custom icon and children 1`] = `
<button
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch mfui-button_content-type_icon-text"
  download={false}
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-button__inner"
  >
    <div
      className="mfui-button__content"
    >
      <div
        className="mfui-button__icon"
      >
        <test-file-stub />
      </div>
      <span
        className="mfui-button__text"
      >
        left icon
      </span>
    </div>
  </div>
</button>
`;

exports[`<Button /> layout should render with different height for resolutions 1`] = `
<a
  className="mfui-button mfui-button_type_primary mfui-button_theme_purple mfui-button_size-all_large mfui-button_size-wide_large mfui-button_size-desktop_medium mfui-button_size-tablet_medium mfui-button_size-mobile_small mfui-button_no-touch mfui-button_content-type_text class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  rel="noreferrer noopener"
  target="_blank"
>
  <div
    className="mfui-button__inner"
  />
</a>
`;

exports[`<Button /> snapshots with loader it renders loader with white color and medium size on all resolutions 1`] = `
<a
  className="mfui-button mfui-button_type_primary mfui-button_theme_purple mfui-button_size-all_large mfui-button_loading mfui-button_no-touch mfui-button_content-type_text class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  rel="noreferrer noopener"
  target="_blank"
>
  <div
    className="mfui-button__inner"
  >
    <Preloader
      color="white"
      sizeAll="medium"
    />
  </div>
</a>
`;

exports[`<Button /> snapshots with loader should render loader with black color 1`] = `
<button
  className="mfui-button mfui-button_type_outline mfui-button_theme_black mfui-button_size-all_medium mfui-button_loading mfui-button_no-touch mfui-button_content-type_text"
  download={false}
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-button__inner"
  >
    <Preloader
      color="black"
      sizeAll="medium"
    />
  </div>
</button>
`;

exports[`<Button /> snapshots with loader should render loader with default color 1`] = `
<button
  className="mfui-button mfui-button_type_outline mfui-button_theme_purple mfui-button_size-all_medium mfui-button_loading mfui-button_no-touch mfui-button_content-type_text"
  download={false}
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-button__inner"
  >
    <Preloader
      color="default"
      sizeAll="medium"
    />
  </div>
</button>
`;

exports[`<Button /> snapshots with loader should render loader with small size on mobile resolution and medium size on the rest 1`] = `
<button
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_size-wide_large mfui-button_size-desktop_large mfui-button_size-tablet_medium mfui-button_size-mobile_small mfui-button_loading mfui-button_no-touch mfui-button_content-type_text"
  download={false}
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-button__inner"
  >
    <Preloader
      color="white"
      sizeAll="medium"
      sizeDesktop="medium"
      sizeMobile="small"
      sizeTablet="medium"
      sizeWide="medium"
    />
  </div>
</button>
`;
